Update AdminControllerTest.java